--- a/index.html
+++ b/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
-</html>
+<html>
+  <head>
+    <title>Minha Loja</title>
+    <link rel="stylesheet" type="text/css" href="estilo.css">
+  </head>
+  <body>
+    <header>
+      <h1>Minha Loja</h1>
+      <nav>
+        <ul>
+          <li><a href="#inicio">Início</a></li>
+          <li><a href="#produtos">Produtos</a></li>
+          <li><a href="#contato">Contato</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="inicio">
+        <h2>Bem-vindo à Minha Loja!</h2>
+        <p>Aqui você encontrará os melhores produtos a preços incríveis.</p>
+      </section>
+      <section id="produtos">
+        <h2>Nossos Produtos</h2>
+        <ul>
+          <li>
+            <h3>Produto 1</h3>
+            <img src="produto1.jpg" alt="Produto 1">
+            <p>Descrição do Produto 1</p>
+            <button>Comprar</button>
+          </li>
+          <li>
+            <h3>Produto 2</h3>
+            <img src="produto2.jpg" alt="Produto 2">
+            <p>Descrição do Produto 2</p>
+            <button>Comprar</button>
+          </li>
+          <li>
+            <h3>Produto 3</h3>
+            <img src="produto3.jpg" alt="Produto 3">
+            <p>Descrição do Produto 3</p>
+            <button>Comprar</button>
+          </li>
+        </ul>
+      </section>
+      <section id="contato">
+        <h2>Fale Conosco</h2>
+        <form>
+          <label>Nome:</label>
+          <input type="text" name="nome">
+          <label>E-mail:</label>
+          <input type="email" name="email">
+          <label>Mensagem:</label>
+          <textarea name="mensagem"></textarea>
+          <input type="submit" value="Enviar">
+        </form>
+      </section>
+    </main>
+    <footer>
+      <p>Copyright © Minha Loja</p>
+    </footer>
+  </body
