--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Minha Loja</title>
     <link rel="stylesheet" type="text/css" href="estilo.css">
   </head>
+  <link rel="stylesheet" href="style.css">
   <body>
     <header>
       <h1>Minha Loja</h1>
