--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
         <ul>
           <li>
             <h3>Produto 1</h3>
-            <img src="produto1.jpg" alt="Produto 1">
+            <img src="./img/darkMagician.png" alt="Produto 1">
             <p>Descrição do Produto 1</p>
             <button>Comprar</button>
           </li>
           <li>
             <h3>Produto 2</h3>
-            <img src="produto2.jpg" alt="Produto 2">
+            <img src="./img/chaosMagician.png" alt="Produto 2">
             <p>Descrição do Produto 2</p>
             <button>Comprar</button>
           </li>
           <li>
             <h3>Produto 3</h3>
-            <img src="produto3.jpg" alt="Produto 3">
+            <img src="./img/blueEyes.png" alt="Produto 3">
             <p>Descrição do Produto 3</p>
             <button>Comprar</button>
           </li>
